No whitespace before assignment